# gitpulse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.github/workflows/: ci.yml  release.yml
Formula/: agentpulse.rb  gitpulse.rb
scripts/: verify_release_assets.sh
src/: actions.rs  agent.rs  app.rs  config.rs  git.rs  lib.rs  main.rs  monitor.rs  path_utils.rs  scanner.rs  setup.rs
src/collectors/: ai_mcp.rs  git_worktrees.rs  mod.rs  system_env_deps.rs
src/dashboard/: builder.rs  mod.rs  models.rs
src/ui/: action_confirm.rs  commit_bar.rs  filter.rs  help.rs  home.rs  mod.rs  sidebar.rs  summary_bar.rs  table.rs  theme.rs  widgets.rs
tasks/: lessons.md  todo.md
tests/: integration.rs
website/: README.md  index.html  main.js  styles.css
