[package]
name = "agentpulse"
version = "0.1.0"
edition = "2021"
description = "Agent-first terminal hub for monitoring and driving many local Git repositories"
license = "MIT"
keywords = ["git", "tui", "terminal", "agent", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/indranilbora/agentpulse"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
chrono = "0.4"
anyhow = "1"
notify = "6"
